--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "yup": "^1.6.1"
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
     "build": "CI=false react-scripts build",
+    "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.{js,jsx}",
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-react": "^7.37.4",
